2017-10-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c:
	  Debug info for partially spilt variables.
	* doc/sdccman.lyx,
	  doc/Makefile.in:
	  Fix SDCC version in manual title for out-of-tree build.

2017-10-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c:
	  Infrastructure for debug info for partially spilt variables.
	* src/SDCCmain.c:
	  Document command line options in help output.

2017-10-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve handling of a in cast.
	* src/z80/gen.c:
	  Improve &.
	* src/z80/gen.c:
	  Improve |.

2017-10-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Optimize ifx on 16-bit pointer read.
	* src/z80/peeph-z80.def:
	  Improve peephole rules for caching 0 in a.

2017-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve subtraction of global variables.
	* src/z80/gen.c:
	  Simplify stack adjustment.
	* src/z80/gen.c:
	  Improve 32-bit increment.
	* src/z80/ralloc2.cc:
	  Improve handling of a in negation.
	* src/z80/gen.c:
	  Improve cast to signed long and signed long long.
	* src/z80/gen.c:
	  Improve addition of immediates.

2017-10-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* SDCC.props: boost 1.64
	* sdas/linksrc/lkmem.c: fixed warning
	* src/mcs51/peep.c,
	* src/SDCCast.c,
	* src/SDCCcse.c,
	* src/SDCCmem.c,
	* src/z80/ralloc2.cc: cosmetic changes

2017-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve handling of a in pointer read and ifx.

2017-10-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/main.c (_parseOptions): fix bug #2634

2017-10-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.h,
	  src/SDCCdwarf2.c:
	  CFI handling in DWARFv2 output, patch by Åke Rehnman.

2017-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  Debug info infrastructure for stm8 registers.
	* device/lib/_fsgt.c,